WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
298630
Ignore ibtoold when logging WebKit1 usage
https://bugs.webkit.org/show_bug.cgi?id=298630
Summary
Ignore ibtoold when logging WebKit1 usage
David Kilzer (:ddkilzer)
Reported
2025-09-09 16:38:54 PDT
Ignore ibtoold when logging WebKit1 usage. This daemon loads a WebKit1 `WebView` as part of its job, so there's no need to log this. <
rdar://152541362
>
Attachments
Add attachment
proposed patch, testcase, etc.
David Kilzer (:ddkilzer)
Comment 1
2025-09-09 16:43:11 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/50518
EWS
Comment 2
2025-09-10 13:52:58 PDT
Committed
299815@main
(17fce9ec6e09): <
https://commits.webkit.org/299815@main
> Reviewed commits have been landed. Closing PR #50518 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug