Ignore ibtoold when logging WebKit1 usage <https://bugs.webkit.org/show_bug.cgi?id=298630> <rdar://152541362>

Reviewed by Alexey Proskuryakov.

* Source/WTF/wtf/cocoa/RuntimeApplicationChecksCocoa.mm:
(WTF::CocoaApplication::shouldOSFaultLogForAppleApplicationUsingWebKit1):
- Fix bundle ID for TestWebKitAPI on macOS.
- Disable WebKit1 logging for ibtoold.

Canonical link: https://commits.webkit.org/299815@main